--- a/style.css
+++ b/style.css
@@ -3,22 +3,33 @@
    margin: 0;
    box-sizing: border-box;
    font-family: 'General Sans';
-   color: #fff;
+
 }
 html,body{
    height: 100%;
    width: 100%;
+   color: #fff;
+}
+#mini-circle{
+  width: 10px;  
+  height: 10px;
+  position: absolute;
+  z-index: 999999;
+  border-radius: 50%;
+  background-color: #fff;
+  transition: all cubic-bezier(0.19, 1, 0.22, 1).8s;
 }
 #main{
     width: 100%;
-
+    background-color: #000;
 }
 #hero{
+    color: #fff;
     width: 100%;
     height: 100vh;
     background-color: black;
 }
-#nav {
+#nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -38,6 +49,16 @@ html,body{
     margin-top: 90px;
    
 }
+.bounding{
+    width: fit-content;
+    /* background-color: red; */
+    overflow: hidden;
+}
+.bounding .boundingelem{
+    transform: translateY(100%);
+    
+
+}
 #Heading h1{
     margin-left: 44px;
     opacity: .6;
@@ -54,6 +75,9 @@ html,body{
 #text-right{
     width: fit-content;
     /* background-color: salmon; */
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 #text-right h5{
@@ -61,4 +85,175 @@ html,body{
     text-transform: uppercase;
     font-size: 15px;
 
+}
+#chhoti-heading{
+    margin-top: 90px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+#chhoti-heading h5{
+    text-transform: uppercase;
+    margin-top:.5vw;
+    text-align: right;
+    font-size: 1vw;
+}
+#hero-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+#hero-footer a{
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+#iconset{
+    display: flex;
+    margin-right: 30px;
+    gap: 20%;
+}
+#hero-footer .circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    /* background-color: #fff; */
+    border: 2px solid #fff;
+    
+}
+#second{
+    width: 100%;
+    height: 135vh;
+    background-color:  #000;
+    padding-right:10vw;
+    padding-top: 200px;
+
+}
+.elem{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 0;
+    width: 100%;
+    border-top: 1px solid #888;
+    padding: 3.5vw 3vw;
+    position: relative;
+
+}
+.elem h1{
+    text-transform: uppercase;
+    font-size: 7vw;
+    opacity: .8;
+}
+.elemlast h1{
+    text-transform: uppercase;
+    font-size: 7vw;
+    opacity: .8;
+}
+.elemlast{
+    border-bottom: 1px solid #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 0;
+    width: 100%;
+    border-top: 1px solid #888;
+    padding: 3.5vw 3vw;
+    position: relative;
+}
+.elemlast img{
+    /* display:none; */
+    opacity: 0;
+    height: 140%;
+    position: absolute;
+    z-index: 999;
+}
+.elem img{
+    /* display:none; */
+    opacity: 0;
+    height: 140%;
+    position: absolute;
+    z-index: 999;
+}
+#about{
+    background-color: #000;
+    width: 100%;
+    padding: 8vw 10vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 40px;
+    padding-left: 38vw;
+}
+#about img{
+ width: 220px; 
+}
+#text-about{
+    width: 80%;
+    /* background-color: saddlebrown; */
+}
+#text-about a{
+    color: #fff;
+    text-decoration: none;
+   padding: 12px 20px;
+   /* padding-top: 4px; */
+   border: 1px solid #fff;
+   align-items: center;
+   border-radius: 30px;
+   font-size: 12px;
+   /* justify-content: center; */
+}
+#text-about  h5{
+    text-transform: uppercase;
+    opacity: .6;
+    margin-bottom: 10px;
+}
+#text-about p{
+    line-height: 1.5;
+    margin-bottom: 15px;
+}
+#Subscribe{
+    padding: 20px 30px;
+    padding-bottom: 3vw;
+    background-color: black;
+
+}
+#Subscribe h5{
+    text-transform: uppercase;
+    opacity: .6;
+}
+#Subscribe h3{
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-top: 10px;
+}
+#footer{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    background-color: #000;
+    padding: 20px 30px;
+    color: #fff;
+}
+
+.footer-left{
+    display: flex;
+    gap:20px ;
+
+}
+#footer a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 500;
+}
+.footer-right{
+    display: flex;
+    gap:30px ;
+    text-transform: uppercase;
+    
 }
